6.51_01
    New Features
    * Module installation will not be stopped by a broken Pod::Man.
      Man pages will just not be installed.
      [rt.cpan.org 43546] (Jesse Vincent)
    * vim swap files, *.swp, will now be ignored by MakeMaker.

    Feature Changes
    * Modules in PREREQ_PM are no longer loaded in order to figure out
      their version.  parse_version() is used instead.
      [rt.cpan.org 44646]
    * PPD files generated with "make ppd" now use the new REQUIRES key
      rather than the now deprecated DEPENDENCY.
      [rt.cpan.org 25179] (GAAS)
    * PPD files no longer contain the deprecated OS tag.
    * fixin is a bit less restrictive allowing things like 
      #!perl5.8.8 and #!perl-debug [rt.cpan.org 29442]
    * Remove the unused perm_rw() and perm_rwx() methods.

    Bug Fixes
    * On 5.10 "make ppd" would generate the wrong ARCHITECTURE saying the
      version is 5.1 instead of 5.10.
    * Our pod2man emulation now requires an argument to --perm_rw.
      [rt.cpan.org 35190] (imacat)
    * DISTVNAME was documented as a WriteMakefile() param but you'd
      get a warning if you tried to use it.  [rt.cpan.org 43217]
    * Better support for parallel make installs.
      [rt.cpan.org 32758] (Brendan O'Dea)

    Test Fixes
    * basic.t will not leave a "bin" environment variable defined on VMS.
      [rt.cpan.org 42150] (John E. Malmberg)
    * Made the tests work ok on systems whose makes assume that files which
      have the same mod time are out of date.  This is often the case for
      the tests which generate files and run make rapidly.
      [rt.cpan.org 29955] (Ken Hirsch)
    * skip test numbers were wrong on VMS in t/basic.t
      [rt.cpan.org 43511] (John E. Malmberg)

    Portability
    * Removed a few hard coded uses of the "false" command.
      [rt.cpan.org 44504]

    VMS
    * Fixed a few calls to catfile() that should be catdir().
      (John E. Malmberg)